# snap-extras

./: .ghci  .gitignore  .travis.yml  README.md  changelog.md  snap-extras.cabal  stack.yaml
poll-example/: .ghci  Main.hs  PollExample.hs
poll-example/snaplets/heist/: _status.tpl  index.tpl  jobstatus.tpl
src/Snap/: Extras.hs
src/Snap/Extras/: Ajax.hs  CSRF.hs  CoreUtils.hs  FlashNotice.hs  FormUtils.hs  JSON.hs  MethodOverride.hs  MsgPack.hs  NavTrails.hs  PollStatus.hs  RestUtils.hs  SpliceUtils.hs  Tabs.hs  TextUtils.hs
src/Snap/Extras/SpliceUtils/: Common.hs  Compiled.hs  Interpreted.hs
test/src/: Main.hs
test/src/Snap/Extras/Tests/: Arbitrary.hs  MethodOverride.hs
