Name:                snap-extras
Version:             0.1.5
Synopsis:            A collection of useful helpers and combinators for Snap web applications.
License:             BSD3
License-file:        LICENSE
Author:              Ozgun Ataman
Maintainer:          ozataman@gmail.com
Category:            Web
Build-type:          Simple
Cabal-version:       >= 1.6


data-files:
  resources/templates/*.tpl

Library
  -- Modules exported by the library.
  Exposed-modules:     
    Snap.Extras
    Snap.Extras.CoreUtils
    Snap.Extras.TextUtils
    Snap.Extras.JSON
    Snap.Extras.FlashNotice
    Snap.Extras.SpliceUtils
    Snap.Extras.FormUtils
    Snap.Extras.Tabs
  other-modules:
    Paths_snap_extras

  hs-source-dirs: src
  Build-depends:
      base
    , containers
    , filepath
    , aeson >= 0.6
    , snap-core >= 0.7 && < 0.9
    , snap >= 0.7 && < 0.9
    , heist >= 0.7 && < 0.9
    , xmlhtml >= 0.1.6
    , bytestring
    , text
    , safe
    , data-lens >= 2.0
    , transformers
    , blaze-html
    , digestive-functors >= 0.3
    , digestive-functors-blaze >= 0.3
    , digestive-functors-snap >= 0.3
  
  -- Other-modules:       
  